fixing overflow

--- a/src/styles/alltasks.css
+++ b/src/styles/alltasks.css
@@ -8,6 +8,7 @@
   background-color: var(--dark-black);
   position: relative;
   gap: 35px;
+  overflow-y: scroll;
 }
 .view-container {
   position: absolute;
